# homeassistant-zipassist

./: .env.example  .gitignore  .pre-commit-config.yaml  API_PLAN.md  HA_ENTITIES.md  README.md  TODO.md  hacs.json  hass-dev.py  pyproject.toml
.github/workflows/: codeql.yml  hassfest.yml  quality.yml  tests.yml
custom_components/zipassist/: __init__.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  frontend_register.py  helpers.py  manifest.json  number.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  time.py
custom_components/zipassist/dashboards/: README.md
custom_components/zipassist/frontend/: zipassist-card.js
custom_components/zipassist/translations/: en.json
docs/: api-endpoints.md  architecture.md  dashboards.md  development.md  entities.md  index.md
exploration/: explore.py
tests/: __init__.py  conftest.py  test_client.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_frontend.py  test_helpers.py  test_services.py
tools/: __init__.py  commands.py  generate_dashboards.py
