[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zipassist"
version = "0.1.3"
description = "Home Assistant integration for ZipAssist CMMS (Zip Industries HydroTaps)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
]

[tool.setuptools.packages.find]
include = ["custom_components*", "tools*"]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    # Code quality tools
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    # Development utilities
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "yarl>=1.8.0",
]

# Centralized tool configuration
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["custom_components", "tests", "exploration"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E9",   # syntax errors
    "F63",  # duplicate argument in function call
    "F7",   # syntax error in forward annotation
    "F82",  # undefined name
    "F401", # imported but unused
    "F841", # local variable is assigned to but never used
]
ignore = [
    "E203", # whitespace before ':'
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.zipassist"]
known-third-party = ["homeassistant", "aiohttp", "yarl"]

[tool.setuptools_scm]
write_to = "custom_components/zipassist/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=custom_components/zipassist",
    "--cov-report=term-missing",
    "--cov-report=xml:tests/coverage.xml",
    "--cov-report=html:tests/htmlcov",
    "--cov-fail-under=50",  # TODO: review/increase
]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["custom_components/zipassist"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
    "custom_components/zipassist/_version.py",
    "hass-dev.py",  # CLI wrapper - not part of core functionality
    "tools/*",  # Development & Testing code - not part of core functionality
    "exploration/*",  # API exploration scripts
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Home Assistant integrations often lack full type stubs
ignore_missing_imports = true